# TheDailyGlobe

./: .env.unfold  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint  pyproject.toml  requirements.txt
admin_panel/: manage.py
admin_panel/config/: db_router.py  settings.py  urls.py  wsgi.py
admin_panel/core/: admin.py  apps.py  models.py  urls.py  views.py
admin_panel/core/management/commands/: generate_initial_admin_user.py  (+4 more)
common/base/: interactor.py
nginx/: Dockerfile  nginx.conf
src/application/: ioc.py
src/application/common/: service.py
src/application/interactors/: articles.py  comments.py  notifications.py  subscriptions.py  users.py
src/application/interfaces/: gateways.py  repositories.py  services.py
src/application/services/: jwt_token_service.py  login.py  notification.py  search.py
src/application/tasks/: notification_tasks.py
src/domain/common/: entity.py
src/domain/enums/: database.py
src/infrastructure/auth/: google_auth.py
src/infrastructure/celery_app/: celery_app.py
src/infrastructure/database/: __init__.py  engine.py  metadata.py
src/infrastructure/interfaces/: uow.py
src/infrastructure/openapi/: openapi.py
src/main/: api.py
src/main/config/: container.py  settings.py
src/presentation/routing/: articles.py  comments.py  notifications.py  subscriptions.py  users.py
src/presentation/schemas/: articles.py  base_schemas.py  categorys.py  comments.py  notifications.py  subscriptions.py  users.py
tests/: generate_password_hash.py  save_object_with_image.py
(+66 files in other folders)
